--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,29 @@
-/*# sourceMappingURL=main.css.map */
+:root {
+  --title-text-color: #212121;
+  --secondary-text-color: #757575;
+  --footer-text: rgba(255, 255, 255, 0.6);
+  --accent-color: #2196f3;
+  --active-button: #188ce8;
+  --primary-white-color: #ffffff;
+  --secondary-gray-color: #f5f4fa;
+  --secondary-footer-color: #2f303a;
+  --logo-black-color: #000000;
+  --header-separate-line: #ececec;
+  --cards-border: #eeeeee;
+  --svg-grey-color: #afb1b8;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  margin: -1px;
+}/*# sourceMappingURL=main.css.map */
