--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,21 @@
 @import "./utils/vars";
 @import "./utils/visualiy-hidden";
+@import "./base/global-styles";
 
-@import "./components/page-header";
-
+@import "./components/header";
+@import "./components/logo";
+@import "./components/hero";
+@import "./components/features-section";
+@import "./components/about-section";
+@import "./components/team-section";
+@import "./components/social-links";
+@import "./components/clients-section";
+@import "./components/footer-container";
+@import "./components/primary-button";
+@import "./components/site-nav";
+@import "./components/contacts-list";
+@import "./components/card-list";
+@import "./components/backdrop";
+@import "./components/modal";
+@import "./components/checkbox";
+@import "./components/portfolio-section";
