red button submit

--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -14,3 +14,6 @@
     --svg-grey-color: #afb1b8;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+$transition-dur: 250ms;
+$cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
