--- a/sass/components/_footer-container.scss
+++ b/sass/components/_footer-container.scss
@@ -121,13 +121,14 @@
     cursor: pointer;
 }
 
-.footer-form__button {
-    padding: 10px 62px 10px 28px;
-}
-
 .footer-form__send-button {
     content: "";
     position: relative;
+}
+
+.footer-form__button {
+    padding: 10px 62px 10px 28px;
+    // min-width: 200px;
 }
 
 .footer-form__icon {
