--- a/sass/components/_primary-button.scss
+++ b/sass/components/_primary-button.scss
@@ -15,8 +15,7 @@
     cursor: pointer;
 
     margin: auto;
-    padding: 10px 32px;
-
+    
     transition: background-color 250ms var(--timing-function),
         box-shadow 250ms var(--timing-function);
 }
@@ -26,4 +25,8 @@
     background-color: var(--active-button);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+}
+
+.hero__primary-button {
+padding: 10px 32px;
 }
