--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
   --header-separate-line: #ececec;
   --cards-border: #eeeeee;
   --svg-grey-color: #afb1b8;
+  --transition-dur: 250ms;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -86,7 +87,6 @@ body {
 .about-section {
   padding-bottom: 94px;
 }
-
 .about-section__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -99,11 +99,9 @@ body {
   gap: 30px;
   position: relative;
 }
-
 .about-section__image {
   display: block;
 }
-
 .about-section__text {
   position: absolute;
   bottom: 0;
@@ -129,27 +127,42 @@ body {
 }
 
 .backdrop {
-  background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
-  z-index: 3;
-  height: 100%;
-  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+  -webkit-transform: scale(1);
+          transform: scale(1);
   opacity: 1;
-  -webkit-transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
-  transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transition-property: opacity, -webkit-transform;
+  transition-property: opacity, -webkit-transform;
+  transition-property: transform, opacity;
+  transition-property: transform, opacity, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
+.is-hidden {
   visibility: hidden;
+  opacity: 0;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
   pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  -webkit-transform: translate(-50%, -50%) scale(1.1);
-          transform: translate(-50%, -50%) scale(1.1);
+  -webkit-transition-property: visibility, opacity, -webkit-transform;
+  transition-property: visibility, opacity, -webkit-transform;
+  transition-property: visibility, transform, opacity;
+  transition-property: visibility, transform, opacity, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-list {
@@ -163,30 +176,22 @@ body {
           justify-content: center;
   gap: 30px;
 }
-
 .card-list__link {
-  background: var(--primary-white-color);
   border: 1px solid var(--cards-border);
-  display: block;
+  background: var(--primary-white-color);
   width: 370px;
-  -webkit-transition: -webkit-box-shadow 250ms var(--timing-function);
-  transition: -webkit-box-shadow 250ms var(--timing-function);
-  transition: box-shadow 250ms var(--timing-function);
-  transition: box-shadow 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
+  display: block;
+  -webkit-transition-duration: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          transition-duration: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.card-list__link:hover,
-.card-list__link:focus {
+.card-list__link:hover, .card-list__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
-.card-list__link:hover .card-list__overlay-text,
-.card-list__link:focus .card-list__overlay-text {
+.card-list__link:hover .card-list__overlay-text, .card-list__link:focus .card-list__overlay-text {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
-
 .card-list__title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -194,30 +199,25 @@ body {
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
-
 .card-list__text {
   color: var(--secondary-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
 }
-
 .card-list__image {
   display: block;
 }
-
 .card-list__container {
   padding: 20px 24px;
   background-color: var(--primary-white-color);
   border: 1px solid var(--cards-border);
   border-top: none;
 }
-
 .card-list__block {
   position: relative;
   overflow: hidden;
 }
-
 .card-list__overlay-text {
   background-color: rgba(33, 150, 243, 0.9);
   position: absolute;
@@ -239,17 +239,15 @@ body {
   transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
 }
 
+.checkbox {
+  position: relative;
+  margin-bottom: 30px;
+}
 .checkbox__input {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
 }
-
-.checkbox {
-  position: relative;
-  margin-bottom: 30px;
-}
-
 .checkbox__label {
   color: var(--secondary-text-color);
   display: block;
@@ -261,7 +259,6 @@ body {
   cursor: pointer;
   padding-left: 36px;
 }
-
 .checkbox__icon {
   content: "";
   position: absolute;
@@ -279,7 +276,6 @@ body {
   -webkit-transition: background-color 250ms var(--timing-function), fill-opacity 250ms var(--timing-function);
   transition: background-color 250ms var(--timing-function), fill-opacity 250ms var(--timing-function);
 }
-
 .checkbox__input:checked + .checkbox__icon {
   background-color: var(--accent-color);
   border-color: var(--accent-color);
@@ -287,19 +283,20 @@ body {
   fill: var(--primary-white-color);
   fill-opacity: 1;
 }
-
 .checkbox__link {
   color: var(--accent-color);
-}
-
-.form-button {
-  padding: 10px 52px;
 }
 
 .clients-section {
   padding: 94px 0;
 }
 
+.clients-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
 .clients-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -318,25 +315,14 @@ body {
   -webkit-transition: border-color 250ms var(--timing-function);
   transition: border-color 250ms var(--timing-function);
 }
-
-.clients-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-}
-
 .clients-list__link:hover {
   border-color: var(--accent-color);
 }
-
 .clients-list__icon {
   -webkit-transition: fill 250ms var(--timing-function);
   transition: fill 250ms var(--timing-function);
 }
-
-.clients-list__link:hover,
-.clients-list__link:focus {
+.clients-list__link:hover, .clients-list__link:focus {
   fill: var(--accent-color);
 }
 
@@ -348,7 +334,6 @@ body {
       flex-wrap: nowrap;
   gap: 50px;
 }
-
 .contacts-list__link {
   color: var(--secondary-text-color);
   font-weight: 500;
@@ -366,22 +351,15 @@ body {
   -webkit-transition: color 250ms var(--timing-function);
   transition: color 250ms var(--timing-function);
 }
-
-.contacts-list__link:hover,
-.contacts-list__link:focus {
+.contacts-list__link:hover, .contacts-list__link:focus {
   color: var(--accent-color);
 }
-
-/* svg mail, tel color  */
 .contacts-list__logo {
   fill: var(--secondary-text-color);
   -webkit-transition: fill 250ms var(--timing-function);
   transition: fill 250ms var(--timing-function);
 }
-
-/* svg mail, tel hover, focus */
-.contacts-list__link:hover .contacts-list__logo,
-.contacts-list__link:focus .contacts-list__logo {
+.contacts-list__link:hover .contacts-list__logo, .contacts-list__link:focus .contacts-list__logo {
   fill: var(--accent-color);
 }
 
@@ -389,7 +367,6 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
 .features-section__title {
   font-weight: 700;
   font-size: 14px;
@@ -397,13 +374,11 @@ body {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
-
 .features-section__text {
   color: var(--secondary-text-color);
   font-size: 14px;
   line-height: 1.71;
 }
-
 .features-section__icon {
   background-color: var(--secondary-gray-color);
   display: -webkit-box;
@@ -420,7 +395,6 @@ body {
   width: 270px;
   height: 120px;
 }
-
 .features-section__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -432,77 +406,46 @@ body {
           justify-content: center;
   gap: 30px;
 }
-
 .features-section__item {
   max-width: 270px;
+}
+
+.filter-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 8px;
+  margin-bottom: 34px;
+}
+.filter-list__button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  padding: 6px 22px;
+  -webkit-transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
+}
+.filter-list__button:hover, .filter-list__button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .footer {
   background-color: var(--secondary-footer-color);
   padding: 60px 0;
-}
-
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 20px;
-}
-
-.footer__logo {
-  color: var(--primary-white-color);
-}
-
-.address__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 9px;
-}
-
-.address__link-map {
-  color: var(--primary-white-color);
-  font-size: 14px;
-  line-height: 1.7;
-}
-
-.address__link {
-  color: var(--footer-text);
-  font-size: 14px;
-  line-height: 1.7;
-  -webkit-transition: color 250ms var(--timing-function);
-  transition: color 250ms var(--timing-function);
-}
-
-.address__link:hover,
-.address__link:focus {
-  color: var(--accent-color);
-}
-
-.address__link-map,
-.address__link {
-  display: block;
-  line-height: 21px;
-}
-
-/*footer-join-container */
-.footer-net {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 20px;
 }
 
 .footer-box {
@@ -515,6 +458,46 @@ body {
           align-items: baseline;
 }
 
+.footer-address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.footer-address__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 9px;
+}
+.footer-address__link-map {
+  color: var(--primary-white-color);
+  font-size: 14px;
+  line-height: 1.7;
+}
+.footer-address__link {
+  color: var(--footer-text);
+  font-size: 14px;
+  line-height: 1.7;
+  -webkit-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+.footer-address__link:hover, .footer-address__link:focus {
+  color: var(--accent-color);
+}
+.footer-address__link-map, .footer-address__link {
+  display: block;
+  line-height: 21px;
+}
+
 .footer-text {
   color: var(--primary-white-color);
   font-family: "Roboto";
@@ -525,13 +508,22 @@ body {
   text-transform: uppercase;
 }
 
+.footer-net {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
 .footer-net__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 10px;
 }
-
 .footer-net__link {
   width: 44px;
   height: 44px;
@@ -550,14 +542,10 @@ body {
   -webkit-transition: background-color 250ms var(--timing-function);
   transition: background-color 250ms var(--timing-function);
 }
-
-/* change hover, focus colors of background icons */
-.footer-net__link:hover,
-.footer-net__link:focus {
+.footer-net__link:hover, .footer-net__link:focus {
   background-color: var(--accent-color);
 }
 
-/* footer */
 .footer-form-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -579,29 +567,25 @@ body {
           flex-direction: row;
   gap: 12px;
 }
-
 .footer-form__input {
   color: var(--primary-white-color);
   background-color: var(--secondary-footer-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  -webkit-filter: drop-shadow 0px 4px 4px rgba(0, 0, 0, 0.15);
+          filter: drop-shadow 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   width: 358px;
   height: 50px;
   padding: 15px 16px;
   cursor: pointer;
 }
-
 .footer-form__send-button {
   content: "";
   position: relative;
 }
-
 .footer-form__button {
   padding: 10px 62px 10px 28px;
 }
-
 .footer-form__icon {
   fill: var(--primary-white-color);
   position: absolute;
@@ -616,7 +600,6 @@ body {
   max-height: 80px;
   border-bottom: 1px solid var(--header-separate-line);
 }
-
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -639,7 +622,6 @@ body {
   max-width: 1600px;
   padding: 200px 0 200px;
 }
-
 .hero__title {
   color: var(--primary-white-color);
   font-weight: 900;
@@ -652,6 +634,9 @@ body {
   margin: auto;
   margin-bottom: 30px;
 }
+.hero__primary-button {
+  padding: 10px 32px;
+}
 
 .logo {
   color: var(--accent-color);
@@ -661,9 +646,12 @@ body {
   line-height: 1.2;
   text-decoration: none;
 }
-
 .logo__text {
   color: var(--logo-black-color);
+}
+
+.footer__logo {
+  color: var(--primary-white-color);
 }
 
 .modal {
@@ -683,7 +671,6 @@ body {
   transition: transform 250ms var(--timing-function);
   transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
 }
-
 .modal__close-button {
   background: var(--primary-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -705,12 +692,14 @@ body {
   right: 8px;
   top: 8px;
 }
-
-.modal__close-button:hover,
-.modal__close-button:focus {
+.modal__close-button:hover, .modal__close-button:focus {
   fill: var(--accent-color);
   -webkit-transition: fill 250ms var(--timing-function);
   transition: fill 250ms var(--timing-function);
+}
+
+.form-button {
+  padding: 10px 52px;
 }
 
 .primary-button {
@@ -746,49 +735,8 @@ body {
   border-radius: 4px;
 }
 
-.hero__primary-button {
-  padding: 10px 32px;
-}
-
 .portfolio-section {
   padding: 94px 0;
-}
-
-/* buttons position */
-.filter-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 8px;
-  margin-bottom: 34px;
-}
-
-.filter-button {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  padding: 6px 22px;
-  -webkit-transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
-  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
-  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
-  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function), -webkit-box-shadow 250ms var(--timing-function);
-}
-
-.filter-button:hover,
-.filter-button:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 /* form field */
@@ -818,7 +766,6 @@ body {
   position: relative;
   margin-bottom: 10px;
 }
-
 .form-control__input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -827,19 +774,16 @@ body {
   outline: none;
   cursor: pointer;
 }
-
 .form-control__input:focus {
   border-color: var(--accent-color);
   -webkit-transition: border-color 250ms var(--timing-function);
   transition: border-color 250ms var(--timing-function);
 }
-
 .form-control__input:focus + .form-control__icon {
   fill: var(--accent-color);
   -webkit-transition: fill 250ms var(--timing-function);
   transition: fill 250ms var(--timing-function);
 }
-
 .form-control__icon {
   position: absolute;
   left: 12px;
@@ -861,7 +805,6 @@ body {
   outline: none;
   cursor: pointer;
 }
-
 .form-textarea:focus {
   border-color: var(--accent-color);
   -webkit-transition: border-color 250ms var(--timing-function);
