--- a/sass/components/_about-section.scss
+++ b/sass/components/_about-section.scss
@@ -1,37 +1,38 @@
 .about-section {
     padding-bottom: 94px;
-}
-
-.about-section__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
     
-    position: relative;
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+    
+            position: relative;
+        }
+    
+        &__image {
+            display: block;
+        }
+    
+        &__text {
+            position: absolute;
+            bottom: 0;
+    
+            color: var(--primary-white-color);
+    
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.14;
+            text-align: center;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+    
+            background: $about-section;
+            display: flex;
+            height: 70px;
+            width: 370px;
+            align-items: center;
+            justify-content: center;
+        }
 }
 
-.about-section__image {
-    display: block;
-}
-
-.about-section__text {
-    position: absolute;
-    bottom: 0;
-
-    color: var(--primary-white-color);
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
-    background: rgba(47, 48, 58, 0.8);
-    display: flex;
-    height: 70px;
-    width: 370px;
-    align-items: center;
-    justify-content: center;
-}
