--- a/sass/components/_card-list.scss
+++ b/sass/components/_card-list.scss
@@ -3,83 +3,83 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+
+    &__link {
+        border: 1px solid var(--cards-border);
+        background: var(--primary-white-color);
+    
+        width: 370px;
+        display: block;
+        
+        transition-duration: box-shadow $transition-dur $cubic-bezier;
+        
+        &:hover,
+        &:focus {
+                box-shadow: $card-list-box-shadow;
+            }
+            
+            &:hover .card-list__overlay-text,
+            &:focus .card-list__overlay-text {
+                transform: translateY(0);
+            }
+        }
+    
+     &__title {
+            color: var(--title-text-color);
+    
+            font-weight: 700;
+            font-size: 18px;
+            letter-spacing: 0.06em;
+    
+            margin-bottom: 4px;
+        }
+    
+    &__text {
+            color: var(--secondary-text-color);
+    
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.88;
+        }
+    
+    &__image {
+            display: block;
+        }
+    
+    &__container {
+            padding: 20px 24px;
+            background-color: var(--primary-white-color);
+            border: 1px solid var(--cards-border);
+            border-top: none;
+        }
+    
+    &__block {
+            position: relative;
+            overflow: hidden;
+        }
+    
+    &__overlay-text {
+            background-color: $overlay-text-background-color;
+    
+            position: absolute;
+    
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+    
+            color: var(--primary-white-color);
+    
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 1.56;
+            letter-spacing: 0.03em;
+    
+            padding: 63px 24px;
+    
+            transform: translateY(100%);
+    
+            transition: transform $transition-dur var(--timing-function);
+        }
 }
 
-.card-list__link {
-    background: var(--primary-white-color);
-    border: 1px solid var(--cards-border);
-
-    display: block;
-    width: 370px;
-
-    transition: box-shadow 250ms var(--timing-function);
-}
-
-.card-list__link:hover,
-.card-list__link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.card-list__link:hover .card-list__overlay-text,
-.card-list__link:focus .card-list__overlay-text {
-    transform: translateY(0);
-}
-
-.card-list__title {
-    color: var(--title-text-color);
-
-    font-weight: 700;
-    font-size: 18px;
-    letter-spacing: 0.06em;
-
-    margin-bottom: 4px;
-}
-
-.card-list__text {
-    color: var(--secondary-text-color);
-
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-}
-
-.card-list__image {
-    display: block;
-}
-
-.card-list__container {
-    padding: 20px 24px;
-    background-color: var(--primary-white-color);
-    border: 1px solid var(--cards-border);
-    border-top: none;
-}
-
-.card-list__block {
-    position: relative;
-    overflow: hidden;
-}
-
-.card-list__overlay-text {
-    background-color: rgba(33, 150, 243, 0.9);
-
-    position: absolute;
-
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    color: var(--primary-white-color);
-
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-
-    padding: 63px 24px;
-
-    transform: translateY(100%);
-
-    transition: transform 250ms var(--timing-function);
-}
