--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -1,57 +1,56 @@
-.checkbox__input {
-    appearance: none;
-}
-
 .checkbox {
     position: relative;
     margin-bottom: 30px;
+
+    &__input {
+            appearance: none;
+        }
+    
+    &__label {
+            color: var(--secondary-text-color);
+    
+            display: block;
+            font-family: "Roboto";
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.71;
+            letter-spacing: 0.03em;
+            cursor: pointer;
+            padding-left: 36px;
+        }
+    
+    &__icon {
+            content: "";
+            position: absolute;
+            z-index: -1;
+    
+            fill: var(--primary-white-color);
+            fill-opacity: 0;
+            top: 50%;
+            left: 13px;
+            transform: translateY(-50%);
+            width: 16px;
+            height: 15px;
+            border: 2px solid var(--title-text-color);
+            border-radius: 2px;
+    
+            transition: background-color 250ms var(--timing-function),
+                fill-opacity 250ms var(--timing-function);
+        }
+    
+    &__input:checked+.checkbox__icon {
+            background-color: var(--accent-color);
+            border-color: var(--accent-color);
+            border: none;
+    
+            fill: var(--primary-white-color);
+            fill-opacity: 1;
+        }
+    
+    &__link {
+            color: var(--accent-color);
+        }
 }
 
-.checkbox__label {
-    color: var(--secondary-text-color);
 
-    display: block;
-    font-family: "Roboto";
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    cursor: pointer;
-    padding-left: 36px;
-}
 
-.checkbox__icon {
-    content: "";
-    position: absolute;
-    z-index: -1;
-
-    fill: var(--primary-white-color);
-    fill-opacity: 0;
-    top: 50%;
-    left: 13px;
-    transform: translateY(-50%);
-    width: 16px;
-    height: 15px;
-    border: 2px solid var(--title-text-color);
-    border-radius: 2px;
-
-    transition: background-color 250ms var(--timing-function),
-        fill-opacity 250ms var(--timing-function);
-}
-
-.checkbox__input:checked+.checkbox__icon {
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
-    border: none;
-
-    fill: var(--primary-white-color);
-    fill-opacity: 1;
-}
-
-.checkbox__link {
-    color: var(--accent-color);
-}
-
-.form-button {
-    padding: 10px 52px;
-}
