--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -2,33 +2,34 @@
     padding: 94px 0;
 }
 
-.clients-list__link {
-    display: flex;
-    fill: var(--svg-grey-color);
-    width: 170px;
-    height: 92px;
-    border: solid 1px var(--svg-grey-color);
-    border-radius: 4px;
-    align-items: center;
-    justify-content: center;
-
-    transition: border-color 250ms var(--timing-function);
-}
-
 .clients-list {
     display: flex;
     gap: 30px;
+
+    &__link {
+            display: flex;
+            fill: var(--svg-grey-color);
+            width: 170px;
+            height: 92px;
+            border: solid 1px var(--svg-grey-color);
+            border-radius: 4px;
+            align-items: center;
+            justify-content: center;
+    
+            transition: border-color $transition-dur var(--timing-function);
+        }
+    
+    &__link:hover {
+            border-color: var(--accent-color);
+        }
+    
+    &__icon {
+            transition: fill $transition-dur var(--timing-function);
+        }
+    
+    &__link:hover,
+    &__link:focus {
+            fill: var(--accent-color);
+        }
 }
 
-.clients-list__link:hover {
-    border-color: var(--accent-color);
-}
-
-.clients-list__icon {
-    transition: fill 250ms var(--timing-function);
-}
-
-.clients-list__link:hover,
-.clients-list__link:focus {
-    fill: var(--accent-color);
-}
