--- a/sass/components/_footer-container.scss
+++ b/sass/components/_footer-container.scss
@@ -4,60 +4,49 @@
     padding: 60px 0;
 }
 
-.footer-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.footer__logo {
-    color: var(--primary-white-color);
-}
-
-.address__list {
-    display: flex;
-    flex-direction: column;
-    gap: 9px;
-}
-
-.address__link-map {
-    color: var(--primary-white-color);
-
-    font-size: 14px;
-    line-height: 1.7;
-}
-
-.address__link {
-    color: var(--footer-text);
-
-    font-size: 14px;
-    line-height: 1.7;
-
-    transition: color 250ms var(--timing-function);
-}
-
-.address__link:hover,
-.address__link:focus {
-    color: var(--accent-color);
-}
-
-.address__link-map,
-.address__link {
-    display: block;
-    line-height: 21px;
-}
-
-/*footer-join-container */
-.footer-net {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
 .footer-box {
     display: flex;
     gap: 93px;
     align-items: baseline;
+}
+
+.footer-address {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    &__list {
+            display: flex;
+            flex-direction: column;
+            gap: 9px;
+        }
+    
+    &__link-map {
+            color: var(--primary-white-color);
+    
+            font-size: 14px;
+            line-height: 1.7;
+        }
+    
+    &__link {
+            color: var(--footer-text);
+    
+            font-size: 14px;
+            line-height: 1.7;
+    
+            transition: color $transition-dur var(--timing-function);
+        }
+    
+    &__link:hover,
+    &__link:focus {
+            color: var(--accent-color);
+        }
+    
+    &__link-map,
+    &__link {
+            display: block;
+            line-height: 21px;
+        }
 }
 
 .footer-text {
@@ -71,31 +60,35 @@
     text-transform: uppercase;
 }
 
-.footer-net__list {
+.footer-net {
     display: flex;
-    gap: 10px;
+    flex-direction: column;
+    gap: 20px;
+
+    &__list {
+            display: flex;
+            gap: 10px;
+        }
+    
+    &__link {
+            width: 44px;
+            height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $footer-net-link-background-color;
+            border-radius: 50%;
+            fill: var(--primary-white-color);
+    
+            transition: background-color $transition-dur var(--timing-function);
+        }
+    
+    &__link:hover,
+    &__link:focus {
+            background-color: var(--accent-color);
+        }
 }
 
-.footer-net__link {
-    width: 44px;
-    height: 44px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    fill: var(--primary-white-color);
-
-    transition: background-color 250ms var(--timing-function);
-}
-
-/* change hover, focus colors of background icons */
-.footer-net__link:hover,
-.footer-net__link:focus {
-    background-color: var(--accent-color);
-}
-
-/* footer */
 .footer-form-container {
     display: flex;
     flex-direction: column;
@@ -106,36 +99,36 @@
     display: flex;
     flex-direction: row;
     gap: 12px;
+
+    &__input {
+            color: var(--primary-white-color);
+            background-color: var(--secondary-footer-color);
+    
+            border: 1px solid $footer-form-input-border;
+            filter: drop-shadow $footer-form-input-drop-shadow;
+            border-radius: 4px;
+            width: 358px;
+            height: 50px;
+            padding: 15px 16px;
+            cursor: pointer;
+        }
+    
+    &__send-button {
+            content: "";
+            position: relative;
+        }
+    
+    &__button {
+            padding: 10px 62px 10px 28px;
+        }
+    
+    &__icon {
+            fill: var(--primary-white-color);
+            position: absolute;
+            right: 28px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
 }
 
-.footer-form__input {
-    color: var(--primary-white-color);
-    background-color: var(--secondary-footer-color);
-
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    width: 358px;
-    height: 50px;
-    padding: 15px 16px;
-    cursor: pointer;
-}
-
-.footer-form__send-button {
-    content: "";
-    position: relative;
-}
-
-.footer-form__button {
-    padding: 10px 62px 10px 28px;
-    // min-width: 200px;
-}
-
-.footer-form__icon {
-    fill: var(--primary-white-color);
-    position: absolute;
-    right: 28px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-}
