--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,9 +2,7 @@
     background-color: var(--secondary-footer-color);
     height: 600px;
 
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(58, 56, 47, 0.4)),
-        url(..//img/hero-image.jpg);
+    background-image: $hero-background-image-linear-gradient;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,20 +10,24 @@
     max-width: 1600px;
 
     padding: 200px 0 200px;
-}
 
-.hero__title {
-    color: var(--primary-white-color);
-
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-
-    max-width: 696px;
-    text-align: center;
-    margin: auto;
-    margin-bottom: 30px;
+    &__title {
+            color: var(--primary-white-color);
+    
+            font-weight: 900;
+            font-size: 44px;
+            line-height: 1.36;
+            letter-spacing: 0.06em;
+            text-transform: uppercase;
+    
+            max-width: 696px;
+            text-align: center;
+            margin: auto;
+            margin-bottom: 30px;
+        }
+    
+    &__primary-button {
+            padding: 10px 32px;
+        }
 }
 
