--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,8 +1,7 @@
 .modal {
     background-color: var(--primary-white-color);
 
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: $modal-box-shadow;
 
     position: absolute;
     top: 50%;
@@ -16,29 +15,30 @@
     transform: translate(-50%, -50%) scale(1);
 
     transition: transform 250ms var(--timing-function);
+
+    &__close-button {
+            background: var(--primary-white-color);
+            border: 1px solid $modal-close-button-border;
+            fill: var(--logo-black-color);
+    
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            cursor: pointer;
+    
+            position: absolute;
+            right: 8px;
+            top: 8px;
+        }
+    
+    &__close-button:hover,
+    &__close-button:focus {
+            fill: var(--accent-color);
+    
+            transition: fill $transition-dur var(--timing-function);
+        }
 }
 
-.modal__close-button {
-    background: var(--primary-white-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    fill: var(--logo-black-color);
-
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    cursor: pointer;
-
-    position: absolute;
-    right: 8px;
-    top: 8px;
-}
-
-.modal__close-button:hover,
-.modal__close-button:focus {
-    fill: var(--accent-color);
-
-    transition: fill 250ms var(--timing-function);
-}
