--- a/sass/components/_portfolio-section.scss
+++ b/sass/components/_portfolio-section.scss
@@ -2,41 +2,6 @@
     padding: 94px 0;
 }
 
-/* buttons position */
-.filter-list {
-    display: flex;
-    justify-content: center;
-    gap: 8px;
-
-    margin-bottom: 34px;
-}
-
-.filter-button {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    padding: 6px 22px;
-
-    transition: color 250ms var(--timing-function),
-        background-color 250ms var(--timing-function),
-        box-shadow 250ms var(--timing-function);
-}
-
-.filter-button:hover,
-.filter-button:focus {
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
-
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-}
-
 /* form field */
 .contact-form__text {
     font-family: "Roboto";
@@ -64,36 +29,38 @@
 .form-control {
     position: relative;
     margin-bottom: 10px;
+
+    &__input {
+            border: 1px solid rgba(33, 33, 33, 0.2);
+            border-radius: 4px;
+            width: 100%;
+    
+            padding: 12px 12px 12px 42px;
+            outline: none;
+            cursor: pointer;
+        }
+    
+    &__input:focus {
+            border-color: var(--accent-color);
+    
+            transition: border-color 250ms var(--timing-function);
+        }
+    
+    &__input:focus+.form-control__icon {
+            fill: var(--accent-color);
+    
+            transition: fill 250ms var(--timing-function);
+        }
+    
+    &__icon {
+            position: absolute;
+            left: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
 }
 
-.form-control__input {
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    width: 100%;
 
-    padding: 12px 12px 12px 42px;
-    outline: none;
-    cursor: pointer;
-}
-
-.form-control__input:focus {
-    border-color: var(--accent-color);
-
-    transition: border-color 250ms var(--timing-function);
-}
-
-.form-control__input:focus+.form-control__icon {
-    fill: var(--accent-color);
-
-    transition: fill 250ms var(--timing-function);
-}
-
-.form-control__icon {
-    position: absolute;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-}
 
 /* Comment */
 .form-textarea {
@@ -108,13 +75,15 @@
     resize: none;
     outline: none;
     cursor: pointer;
+
+    &:focus {
+            border-color: var(--accent-color);
+    
+            transition: border-color $transition-dur var(--timing-function);
+        }
 }
 
-.form-textarea:focus {
-    border-color: var(--accent-color);
 
-    transition: border-color 250ms var(--timing-function);
-}
 
 ::placeholder {
     color: rgba(117, 117, 117, 0.5);
