--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,11 +9,13 @@
 @import "./components/clients-section";
 @import "./components/contacts-list";
 @import "./components/features-section";
+@import "./components/filter-button";
 @import "./components/footer-container";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/logo";
 @import "./components/modal";
+@import "./components/modal-button";
 @import "./components/primary-button";
 @import "./components/portfolio-section";
 @import "./components/site-nav";
