--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,4 +1,4 @@
-// veriables
+// variables css
 :root {
     --title-text-color: #212121;
     --secondary-text-color: #757575;
@@ -12,8 +12,33 @@
     --header-separate-line: #ececec;
     --cards-border: #eeeeee;
     --svg-grey-color: #afb1b8;
+
+    --transition-dur: 250ms;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+// variables scss
+$backdrop: rgba(0, 0, 0, 0.2);
+$about-section: rgba(47, 48, 58, 0.8);
+$card-list-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06),
+1px 4px 6px rgba(0, 0, 0, 0.16);
+$overlay-text-background-color:rgba(33, 150, 243, 0.9);
+$filter-list-button-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+0px 1px 2px rgba(0, 0, 0, 0.08),
+0px 2px 2px rgba(0, 0, 0, 0.12);
+$modal-box-shadow:0px 1px 3px rgba(0, 0, 0, 0.12),
+0px 1px 1px rgba(0, 0, 0, 0.14),
+0px 2px 1px rgba(0, 0, 0, 0.2);
+$modal-close-button-border:rgba(0, 0, 0, 0.1);
+$footer-form-input-border: rgba(255, 255, 255, 0.3);
+$footer-form-input-drop-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+$footer-net-link-background-color: rgba(255, 255, 255, 0.1);
+$hero-background-image-linear-gradient: linear-gradient(rgba(47, 48, 58, 0.4),
+    rgba(58, 56, 47, 0.4)),
+url(..//img/hero-image.jpg);
+
+
+// variables timing scss
 $transition-dur: 250ms;
 $cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
