--- a/sass/components/_modal-form-field.scss
+++ b/sass/components/_modal-form-field.scss
@@ -1,18 +1,16 @@
-.portfolio-section {
-    padding: 94px 0;
+.contact-form {
+    &__text {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        letter-spacing: 0.03em;
+        margin-bottom: 12px;
+    }
 }
 
-/* form field */
-.contact-form__text {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 12px;
-}
 
 .form-label {
     color: var(--secondary-text-color);
@@ -58,40 +56,4 @@
             top: 50%;
             transform: translateY(-50%);
         }
-}
-
-
-
-/* Comment */
-.form-textarea {
-    border: 1px solid rgba(33, 33, 33, 0.2);
-
-    display: block;
-    margin-bottom: 20px;
-    border-radius: 4px;
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
-    resize: none;
-    outline: none;
-    cursor: pointer;
-
-    &:focus {
-            border-color: var(--accent-color);
-    
-            transition: border-color $transition-dur var(--timing-function);
-        }
-}
-
-
-
-::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
 }
