--- a/sass/components/_primary-button.scss
+++ b/sass/components/_primary-button.scss
@@ -18,12 +18,15 @@
     
     transition: background-color 250ms var(--timing-function),
         box-shadow 250ms var(--timing-function);
+
+    &:hover,
+    &:focus {
+        background-color: var(--active-button);
+
+        box-shadow: $primary-button-box-shadow;
+        border-radius: 4px;
+    }
 }
 
-.primary-button:hover,
-.primary-button:focus {
-    background-color: var(--active-button);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-}
+
 
