--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -8,39 +8,38 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
-}
 
-.team-list__item {
-    background-color: var(--primary-white-color);
-}
-
-.team-list__title {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.team-list__text {
-    color: var(--secondary-text-color);
-
-    font-size: 16px;
-    line-height: 1.18;
-
-    text-align: center;
-    margin-bottom: 16px;
-}
-
-.team-list__image {
-    display: block;
-}
-
-.team-list__container {
-    padding: 30px;
-    background-color: var(--primary-white-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    &__item {
+            background-color: var(--primary-white-color);
+        }
+    
+    &__title {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.18;
+    
+            margin-bottom: 10px;
+            text-align: center;
+        }
+    
+    &__text {
+            color: var(--secondary-text-color);
+    
+            font-size: 16px;
+            line-height: 1.18;
+    
+            text-align: center;
+            margin-bottom: 16px;
+        }
+    
+    &__image {
+            display: block;
+        }
+    
+    &__container {
+            padding: 30px;
+            background-color: var(--primary-white-color);
+            box-shadow: $modal-box-shadow;
+            border-radius: 0px 0px 4px 4px;
+        }
 }
