--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -19,6 +19,8 @@
 
 // variables scss
 $backdrop: rgba(0, 0, 0, 0.2);
+$placeholder: rgba(117, 117, 117, 0.5);
+
 $about-section: rgba(47, 48, 58, 0.8);
 $card-list-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -37,7 +39,7 @@ $footer-net-link-background-color: rgba(255, 255, 255, 0.1);
 $hero-background-image-linear-gradient: linear-gradient(rgba(47, 48, 58, 0.4),
     rgba(58, 56, 47, 0.4)),
 url(..//img/hero-image.jpg);
-
+$primary-button-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 // variables timing scss
 $transition-dur: 250ms;
